Tests/Negative/DuplicateParameterName.mr
fun test(a: i32, a: i32): i32 { // Error: Duplicate parameter name 'a'
    return a;
}
